feat: add platform clarification question to FAQ

--- a/faq.html
+++ b/faq.html
@@ -449,6 +449,18 @@
             <div class="faq-list">
                 <div class="faq-item">
                     <button class="faq-question">
+                        <h3>Is NYRA an influencer marketing platform?</h3>
+                        <div class="faq-icon">▼</div>
+                    </button>
+                    <div class="faq-answer">
+                        <div class="faq-answer-content">
+                            <p>No. NYRA is not an influencer marketing platform. It’s a data-driven authority intelligence solution that evaluates real influence, engagement quality, and expertise, enabling you to make informed, data-backed decisions with confidence.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <button class="faq-question">
                         <h3>What is Authority Intelligence?</h3>
                         <div class="faq-icon">▼</div>
                     </button>
