fix: breadcrumb overlap and header behavior for post/update pages

--- a/faq.html
+++ b/faq.html
@@ -121,7 +121,7 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
-    <header class="fixed-header-wrapper">
+    <header class="fixed-header-wrapper header-static">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
             <a href="/index.html" class="logo" style="text-decoration: none;">
@@ -431,7 +431,7 @@
     </header>
 
     <main>
-        <section class="container" style="max-width: 900px; padding: 60px 20px 120px;">
+        <section class="container" style="max-width: 900px; padding: 140px 20px 120px;">
             <nav class="breadcrumbs">
                 <a href="/index.html">Home</a>
                 <span class="separator">/</span>
