--- a/insights.html
+++ b/insights.html
@@ -42,7 +42,7 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
-    <header class="fixed-header-wrapper">
+    <header class="fixed-header-wrapper header-static">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
             <a href="/index.html" class="logo" style="text-decoration: none;">
@@ -353,7 +353,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="container" style="max-width: 1000px; text-align: center; padding: 60px 20px 80px;">
+        <section class="container" style="max-width: 1000px; text-align: center; padding: 140px 20px 80px;">
             <nav class="breadcrumbs" style="justify-content: center;">
                 <a href="/index.html">Home</a>
                 <span class="separator">/</span>
