--- a/post.html
+++ b/post.html
@@ -17,7 +17,7 @@
 
     <style>
         .article-hero {
-            padding: 180px 0 80px;
+            padding: 220px 0 80px;
             text-align: center;
             max-width: 900px;
             margin: 0 auto;
@@ -304,7 +304,7 @@
     <!-- Floating Header Container -->
         
     <!-- Floating Header Container -->
-    <header class="fixed-header-wrapper">
+    <header class="fixed-header-wrapper header-static">
         <div class="nav-pill" id="main-nav">
             <!-- Logo -->
             <a href="/index.html" class="logo" style="text-decoration: none;">
