feat: pivot branding to 'Decision Engine' and standardize footers

--- a/404.html
+++ b/404.html
@@ -203,7 +203,7 @@
             </div>
             <div class="search-results" id="search-results">
                 <div class="search-placeholder">
-                    <p>Type to search the Authority Graph™</p>
+                    <p>Type to search the Decision Engine</p>
                     <div class="search-suggestions">
                         <span>Expert Discovery</span>
                         
